<resources>
    <string name="app_name">SynergiaApp</string>
    <string name="user">User :</string>
    <string name="password">Password :</string>
    <string name="buscar">Buscar</string>
    <string name="atualizar">Atualizar</string>
    <string name="configurações">Configurações</string>
    <string name="adicionar">adicionar</string>
    <string name="sair">Sair</string>
    <string name="curriculos">currículos</string>
    <string name="configuracao">Configuração</string>
    <string name="cadastro">Cadastro</string>
    <string name="voltar">voltar</string>
    <string name="salvar">salvar</string>
    <string name="data_nascimento">Data Nascimento:</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Synergia Sys</string>
    <string name="nav_header_subtitle">O app de oportunidades</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Currículo</string>
    <string name="menu_slideshow">Alterar</string>
    <string name="menu_tools">Configurações</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_buscar">buscar</string>
</resources>
